# 1e3ms-insights

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pre-commit-check-pyright.sh
src/: .coveragerc  .gitignore  1e3ms-insights.py  config.json.sample  event-replay.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
src/insights/: config.py  error.py  eventdb.py  logging.py  state.py
src/insights/api/: __init__.py  github.py
src/insights/engine/: db.py  db_client.py  db_types.py  github.py  insights.py  installation.py
src/insights/engine/handlers/: __init__.py
src/insights/engine/handlers/hooks/: issues.py
